--- a/src/scss/pages/_exchangeRate.scss
+++ b/src/scss/pages/_exchangeRate.scss
@@ -1,1 +1,213 @@
- 
+.advertisement {
+  position: fixed;
+  right: 0;
+  bottom: calc(50% - 50px);
+  z-index: 99999;
+  text-decoration: none !important;
+  max-width: 300px;
+  animation: advertisement 5s infinite;
+  a {
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    display: block;
+    background: no-repeat center/contain;
+  }
+  @media (min-width: 992px) {
+    a {
+      width: 150px;
+      height: 150px;
+    }
+  }
+}
+.filter_exchange {
+  border: 1px solid #ececec;
+  border-radius: 10px;
+  margin-top: 10px;
+  ul {
+    @include Flexible();
+    li {
+      width: 100%;
+      &:first-child {
+        a {
+          border-radius: 10px 0 0 10px;
+        }
+      }
+      &:last-child {
+        a {
+          border-radius: 0 10px 10px 0;
+        }
+      }
+      a {
+        display: block;
+        font-family: "TT Commons Bold";
+        color: black;
+        text-align: center;
+        padding: 10px 15px;
+        font-size: 16px;
+        &.active {
+          background-color: $primary_color;
+        }
+      }
+    }
+  }
+  @media (min-width: 992px) {
+    display: inline-block;
+    ul {
+      li {
+        a {
+          height: 55px;
+          font-size: 18px;
+          padding: 15px 30px;
+        }
+      }
+    }
+  }
+}
+.e_rate_tables {
+  padding: 10px 0 40px;
+  .e_rate {
+    margin-bottom: 10px;
+    .change_sides {
+      display: none;
+      cursor: pointer;
+    }
+    .r_line {
+      @include Flexible($j-cont: space-between);
+      padding: 10px 0 0;
+      border-bottom: 3px solid $primary_color;
+
+      input,
+      .i_result {
+        font-family: "TT Commons Bold";
+        font-size: 30px;
+        width: 100%;
+      }
+    }
+    .e_curr {
+      transform: scale(1.3);
+      transform-origin: right;
+      padding: 0 12px 0 0;
+      font-size: 16px;
+      display: block;
+      height: 30px;
+      margin: 13px 0 0 0;
+      font-family: "TT Commons Bold";
+      background: no-repeat right 40%;
+    }
+  }
+  .e_tables {
+    margin: 0 -15px;
+    padding: 0 0 10px 0;
+    overflow-x: auto;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    .e_tables_inner {
+      padding: 0 15px;
+      width: 700px;
+      table {
+        border-collapse: collapse;
+        border-radius: 10px;
+        box-shadow: 0 0 0 1px $card_border_color;
+        margin: 20px 0;
+        width: 100%;
+        tbody {
+          tr {
+            &:first-child {
+              td {
+                padding-top: 15px;
+              }
+            }
+            &:last-child {
+              td {
+                padding-bottom: 15px;
+              }
+            }
+          }
+        }
+        tr {
+          text-align: left;
+          th {
+            border-bottom: 1px solid $card_border_color;
+            font-weight: normal;
+            &:not(:last-child) {
+              border-right: 1px solid $card_border_color;
+            }
+          }
+          td {
+            &:not(:last-child) {
+              border-right: 1px solid $card_border_color;
+            }
+          }
+          .th_item,
+          .td_item {
+            @include Flexible($j-cont: space-between, $a-items: center);
+            height: 60px;
+            padding: 0 15px;
+            font-size: 16px;
+            line-height: 15px;
+            .th_item_inner {
+              width: 100%;
+              color: $black_50;
+            }
+          }
+          .td_item {
+            height: 40px;
+            .td_item_inner {
+              width: 100%;
+              font-size: 18px;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (min-width: 992px) {
+    padding: 30px 0;
+    .e_rate {
+      margin-bottom: 50px;
+      position: relative;
+      @include Flexible($j-cont: space-between);
+      .change_sides {
+        display: block;
+        width: 50px;
+        height: 50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        background: no-repeat center;
+      }
+      .r_line {
+        width: calc(50% - 50px);
+        border-width: 6px;
+        input,
+        .i_result {
+          font-size: 40px;
+        }
+      }
+    }
+    .e_tables {
+      margin: 0;
+      padding: 0;
+      overflow: visible;
+      .e_tables_inner {
+        width: auto;
+        padding: 0;
+        table {
+          tr {
+            .th_item,
+            .td_item {
+              font-size: 18px;
+              padding: 0 35px;
+              .td_item_inner{
+                font-size: 22px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
