--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -47,6 +47,24 @@
     opacity: 0;
   }
 }
+@keyframes advertisement {
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  35% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  65% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
 .entrance .swiper .swiper-slide .slide-content .content-inner a .curved-btn, .curved-btn {
   margin: 20px 0;
   padding: 13px 20px;
@@ -376,7 +394,6 @@ h4 {
   margin-top: 135px;
 }
 .s_title .page_title {
-  padding: 0 15px;
   margin: 0 auto 20px;
   text-align: center;
   max-width: 1100px;
@@ -398,7 +415,6 @@ h4 {
     margin-top: 150px;
   }
   .s_title .page_title {
-    padding: 0;
     margin: 0 auto 50px auto;
   }
   .s_title .page_title h1 {
@@ -1098,12 +1114,12 @@ header .header-bottom .header-additions .wrapper .additions .contact {
 header.add-bg {
   background-color: #fff;
 }
+header.add-bg .header-bottom {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
+}
 header.fix-head .header-top {
   height: 0;
   overflow: hidden;
-}
-header.fix-head .header-bottom {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
 }
 header.fix-head .header-bottom .header-main .right-side a.internet-bank {
   width: 45px;
@@ -2744,6 +2760,209 @@ section {
   #cards .cards .card .c_about ul li .more-details {
     width: 200px;
     justify-content: flex-start;
+  }
+}
+
+.advertisement {
+  position: fixed;
+  right: 0;
+  bottom: calc(50% - 50px);
+  z-index: 99999;
+  text-decoration: none !important;
+  max-width: 300px;
+  animation: advertisement 5s infinite;
+}
+.advertisement a {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  display: block;
+  background: no-repeat center/contain;
+}
+@media (min-width: 992px) {
+  .advertisement a {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+.filter_exchange {
+  border: 1px solid #ececec;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.filter_exchange ul {
+  display: flex;
+}
+.filter_exchange ul li {
+  width: 100%;
+}
+.filter_exchange ul li:first-child a {
+  border-radius: 10px 0 0 10px;
+}
+.filter_exchange ul li:last-child a {
+  border-radius: 0 10px 10px 0;
+}
+.filter_exchange ul li a {
+  display: block;
+  font-family: "TT Commons Bold";
+  color: black;
+  text-align: center;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+.filter_exchange ul li a.active {
+  background-color: #FFC628;
+}
+@media (min-width: 992px) {
+  .filter_exchange {
+    display: inline-block;
+  }
+  .filter_exchange ul li a {
+    height: 55px;
+    font-size: 18px;
+    padding: 15px 30px;
+  }
+}
+
+.e_rate_tables {
+  padding: 10px 0 40px;
+}
+.e_rate_tables .e_rate {
+  margin-bottom: 10px;
+}
+.e_rate_tables .e_rate .change_sides {
+  display: none;
+  cursor: pointer;
+}
+.e_rate_tables .e_rate .r_line {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0 0;
+  border-bottom: 3px solid #FFC628;
+}
+.e_rate_tables .e_rate .r_line input,
+.e_rate_tables .e_rate .r_line .i_result {
+  font-family: "TT Commons Bold";
+  font-size: 30px;
+  width: 100%;
+}
+.e_rate_tables .e_rate .e_curr {
+  transform: scale(1.3);
+  transform-origin: right;
+  padding: 0 12px 0 0;
+  font-size: 16px;
+  display: block;
+  height: 30px;
+  margin: 13px 0 0 0;
+  font-family: "TT Commons Bold";
+  background: no-repeat right 40%;
+}
+.e_rate_tables .e_tables {
+  margin: 0 -15px;
+  padding: 0 0 10px 0;
+  overflow-x: auto;
+}
+.e_rate_tables .e_tables::-webkit-scrollbar {
+  display: none;
+}
+.e_rate_tables .e_tables .e_tables_inner {
+  padding: 0 15px;
+  width: 700px;
+}
+.e_rate_tables .e_tables .e_tables_inner table {
+  border-collapse: collapse;
+  border-radius: 10px;
+  box-shadow: 0 0 0 1px #ececec;
+  margin: 20px 0;
+  width: 100%;
+}
+.e_rate_tables .e_tables .e_tables_inner table tbody tr:first-child td {
+  padding-top: 15px;
+}
+.e_rate_tables .e_tables .e_tables_inner table tbody tr:last-child td {
+  padding-bottom: 15px;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr {
+  text-align: left;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr th {
+  border-bottom: 1px solid #ececec;
+  font-weight: normal;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr th:not(:last-child) {
+  border-right: 1px solid #ececec;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr td:not(:last-child) {
+  border-right: 1px solid #ececec;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr .th_item,
+.e_rate_tables .e_tables .e_tables_inner table tr .td_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0 15px;
+  font-size: 16px;
+  line-height: 15px;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr .th_item .th_item_inner,
+.e_rate_tables .e_tables .e_tables_inner table tr .td_item .th_item_inner {
+  width: 100%;
+  color: rgba(0, 0, 0, 0.5019607843);
+}
+.e_rate_tables .e_tables .e_tables_inner table tr .td_item {
+  height: 40px;
+}
+.e_rate_tables .e_tables .e_tables_inner table tr .td_item .td_item_inner {
+  width: 100%;
+  font-size: 18px;
+}
+@media (min-width: 992px) {
+  .e_rate_tables {
+    padding: 30px 0;
+  }
+  .e_rate_tables .e_rate {
+    margin-bottom: 50px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
+  .e_rate_tables .e_rate .change_sides {
+    display: block;
+    width: 50px;
+    height: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: no-repeat center;
+  }
+  .e_rate_tables .e_rate .r_line {
+    width: calc(50% - 50px);
+    border-width: 6px;
+  }
+  .e_rate_tables .e_rate .r_line input,
+  .e_rate_tables .e_rate .r_line .i_result {
+    font-size: 40px;
+  }
+  .e_rate_tables .e_tables {
+    margin: 0;
+    padding: 0;
+    overflow: visible;
+  }
+  .e_rate_tables .e_tables .e_tables_inner {
+    width: auto;
+    padding: 0;
+  }
+  .e_rate_tables .e_tables .e_tables_inner table tr .th_item,
+  .e_rate_tables .e_tables .e_tables_inner table tr .td_item {
+    font-size: 18px;
+    padding: 0 35px;
+  }
+  .e_rate_tables .e_tables .e_tables_inner table tr .th_item .td_item_inner,
+  .e_rate_tables .e_tables .e_tables_inner table tr .td_item .td_item_inner {
+    font-size: 22px;
   }
 }
 
