half of the cardOrder page has been fixed

--- a/src/scss/partials/_mixin.scss
+++ b/src/scss/partials/_mixin.scss
@@ -1,15 +1,33 @@
-@mixin Flexible($f-dir:null,$f-wrap:null,$j-cont:null,$a-items:null,$a-cont:null){
-    display: flex;
-    flex-direction: $f-dir;
-    flex-wrap: $f-wrap;
-    justify-content: $j-cont;
-    align-items: $a-items;
-    align-content: $a-cont;
+@mixin Flexible(
+  $f-dir: null,
+  $f-wrap: null,
+  $j-cont: null,
+  $a-items: null,
+  $a-cont: null
+) {
+  display: flex;
+  flex-direction: $f-dir;
+  flex-wrap: $f-wrap;
+  justify-content: $j-cont;
+  align-items: $a-items;
+  align-content: $a-cont;
 }
-@mixin Position($pos:null,$top:null,$left:null,$bottom:null,$right:null){
-    position: $pos;
-    top: $top;
-    left:$left;
-    right: $right;
-    bottom: $bottom;
+@mixin Position(
+  $pos: null,
+  $top: null,
+  $left: null,
+  $bottom: null,
+  $right: null
+) {
+  position: $pos;
+  top: $top;
+  left: $left;
+  right: $right;
+  bottom: $bottom;
+}
+@mixin Gridable($columns:null,$rows:null,$gap:null) {
+  display: grid;
+  grid-template-columns: $columns;
+  grid-template-rows: $rows;
+  gap:$gap;
 }
