--- a/src/scss/pages/_cardOrder.scss
+++ b/src/scss/pages/_cardOrder.scss
@@ -240,12 +240,316 @@
       }
     }
     .cashback_cards {
-      @include Gridable($columns: repeat(4, 1fr), $gap:0 50px);
+      @include Gridable($columns: repeat(4, 1fr), $gap: 0 50px);
     }
     .cashback_inner {
       h2 {
         padding-bottom: 20px;
       }
+    }
+  }
+}
+
+.fin_modal {
+  box-sizing: border-box;
+  width: 800px;
+  max-width: calc(100vw - 20px);
+  height: auto;
+  padding: 24px;
+  background-color: #fff;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, calc(-50% + 10px));
+  z-index: 91;
+  border-radius: 8px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.45s cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition-delay: 0.15s;
+  &.show {
+    transform: translate(-50%, calc(-50% + 0px));
+    opacity: 1;
+    visibility: visible;
+  }
+  .header {
+    @include Flexible($j-cont: space-between, $a-items: center);
+    padding-bottom: 16px;
+    h2 {
+      line-height: 1.33;
+      color: #000;
+      font-size: 27px;
+    }
+    a {
+      display: block;
+      width: 24px;
+      height: 24px;
+      background: no-repeat 50%;
+      opacity: 0.2;
+      transition: 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+    }
+  }
+  .fin_images {
+    max-height: calc(100vh - 180px);
+    overflow-y: auto;
+    .fin_image {
+      &:first-child {
+        margin-bottom: 10px;
+      }
+      img {
+        display: block;
+        object-fit: contain;
+      }
+      span {
+        display: block;
+        padding: 16px 0 0;
+        font-size: 18px;
+        line-height: 1.33;
+        font-weight: 400;
+        text-align: center;
+        letter-spacing: -0.078px;
+        color: #000;
+      }
+    }
+  }
+  @media (min-width: 576px) {
+    padding-bottom: 24px;
+    .header {
+      h2 {
+        font-size: 32px;
+      }
+    }
+    .fin_images {
+      @include Gridable($columns: repeat(2, 1fr), $gap: 32px);
+      .fin_image {
+        &:first-child {
+          margin: 0;
+        }
+        height: fit-content;
+      }
+    }
+  }
+}
+.darkness {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 91;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.45s cubic-bezier(0.39, 0.575, 0.565, 1);
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.card_order_form {
+  padding: 110px 0 60px;
+  background-color: #f9f9f9;
+  .form_container {
+    max-width: 600px;
+    margin: 0 auto;
+    .section_head {
+      text-align: center;
+      h2 {
+        padding: 0 0 36px;
+        font-size: 32px;
+        line-height: 1.75;
+        color: #000;
+      }
+      .card_image {
+        margin-bottom: 36px;
+        position: relative;
+        &:before {
+          content: "";
+          background-color: #ccc;
+          height: 1px;
+          width: 100%;
+          position: absolute;
+          left: 0;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+        span {
+          display: inline-block;
+          padding: 0 36px;
+          background-color: #f9f9f9;
+          position: relative;
+          img {
+            display: block;
+            width: 67px;
+          }
+        }
+      }
+    }
+    .section_body {
+      padding: 0 20px;
+      .hidden {
+        opacity: 0;
+        visibility: hidden;
+        height: 0;
+        &.show {
+          opacity: 1;
+          visibility: visible;
+          height: auto;
+        }
+        .payment_method_text {
+          padding: 12px 12px 8px 64px;
+          font-size: 13px;
+          line-height: 1.38;
+          letter-spacing: -0.078px;
+          color: #303030;
+          background-color: rgba(217, 217, 214, 0.1);
+          box-shadow: inset 0 0 0 1px rgba(150, 150, 150, 1);
+          border-radius: 12px;
+          position: relative;
+          margin-bottom: 24px;
+          &::before {
+            content: "";
+            background: url(../../public/images/fin_info.svg) no-repeat 50%;
+            display: block;
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            left: 22px;
+            top: calc(50% - 12px);
+            opacity: 0.99;
+          }
+        }
+      }
+      .hint {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 18px;
+        cursor: pointer;
+      }
+      .input {
+        padding-bottom: 24px;
+        label {
+          position: relative;
+          select,
+          input {
+            display: block;
+            width: 100%;
+            height: 64px;
+            padding: 0 16px;
+            background: #fff;
+            border: 1px solid #eaeaea;
+            font-size: 17px;
+            color: #000;
+            border-radius: 8px;
+            box-sizing: border-box;
+            &.valid + span {
+              font-size: 12px;
+              top: 12px;
+            }
+            &.valid {
+              padding: 10px 16px 0 16px;
+            }
+          }
+
+          & > span {
+            letter-spacing: -0.408px;
+            font-size: 17px;
+            color: #ccc;
+            pointer-events: none;
+            position: absolute;
+            left: 16px;
+            top: 20px;
+            transition: 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+          }
+          select {
+            background: url(../../public/images/down_angle.svg) #fff no-repeat
+              calc(100% - 16px) 50%;
+          }
+        }
+      }
+      .delivery,
+      .branch {
+        display: none;
+        &.show {
+          display: block;
+        }
+      }
+      @media (min-width: 992px) {
+        padding: 0;
+        .inputs {
+          @include Gridable($columns: repeat(2, 1fr), $gap: 24px);
+        }
+      }
+    }
+    .divider_h3 {
+      margin: 0 0 24px;
+      text-align: center;
+      position: relative;
+      &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #ccc;
+        position: absolute;
+        left: 0;
+        top: 50%;
+      }
+      span {
+        display: inline-block;
+        padding: 0 12px;
+        font-size: 14px;
+        line-height: 1.33;
+        color: #939393;
+        background-color: #f9f9f9;
+        position: relative;
+      }
+    }
+    h4 {
+      padding: 0 0 8px;
+      font-size: 14px;
+      line-height: 1.33;
+      color: #939393;
+    }
+    .one_check {
+      padding-bottom: 16px;
+      label {
+        display: block;
+        position: relative;
+        padding-left: 30px;
+        cursor: pointer;
+        input {
+          display: none;
+          &:checked + em {
+            box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0);
+            background-image: url(../../public/images/done_mark.svg);
+          }
+        }
+        em {
+          display: inline-block;
+          width: 20px;
+          height: 20px;
+          background: no-repeat 50%;
+          position: absolute;
+          left: 0;
+          top: calc(50% - 12px);
+          box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+          border-radius: 50%;
+          transition: 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
+        }
+        span {
+          font-size: 14px;
+          line-height: 1.33;
+          color: #939393;
+        }
+      }
+    }
+    .yelo-btn {
+      width: 100%;
     }
   }
 }
