update card order form

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -167,6 +167,7 @@
         display: block;
         background: no-repeat center #ffffff;
         background-size: 20px;
+        cursor: pointer;
       }
     }
   }
