--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -154,6 +154,9 @@ h4 {
   background-color: red;
   margin-top: 50px;
 }
+.alert{
+  box-shadow: inset 0 0 0 1px #f00;
+}
 .s_title {
   margin-top: 135px;
   .page_title {
